bugfix: issue #8 dropdown visibility

--- a/src/assets/css/main.css
+++ b/src/assets/css/main.css
@@ -2418,7 +2418,7 @@ p {
   #nav .nav-dropdown {
     position: absolute;
     background-color: #f9f9f9;
-    top: 50px;
+    top: 55px;
     min-width: 210px;
     box-shadow: 0px 8px 16px 0px rgba(0, 0, 0, 0.2);
     z-index: 1; }
