--- a/src/assets/sass/nav.scss
+++ b/src/assets/sass/nav.scss
@@ -89,7 +89,7 @@
     .nav-dropdown {
         position: absolute;
         background-color: #f9f9f9;
-        top: 50px;
+        top: 55px;
         min-width: 210px;
         box-shadow: 0px 8px 16px 0px rgba(0,0,0,0.2);
         z-index: 1;
